package com.thomson.practice.dp.hf.factory.entity;

/**
 * The greek pizza
 *
 * @author Thomson Tang
 */
public class GreekPizza extends Pizza {
    
}
